--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "reactjs-popup": "^1.5.0",
     "react-rooter": "^0.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
-
+    "react-scripts": "3.4.1",
+    "reactjs-popup": "^1.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
